# cmkcpp

./: .gitignore  cmkcpp.cpp  cmkcpp.h  lexer.cpp  lexer.h  tokens.h
tests/: CMakeLists.txt  main.cpp
tests/blocks/: CMakeCache.txt  Makefile  cmake_install.cmake  tests  tests.cbp  tests.layout
